Included BloodBathEvents. Fixed numbering in BloodBathEvents.cpp (2 number 22 events). Defined a constant for Bloodbath max points per tribute. added a starting amount for possible points between tributes.

--- a/HungerGamesSimulator/HungerGamesSimulator.vcxproj
+++ b/HungerGamesSimulator/HungerGamesSimulator.vcxproj
@@ -146,6 +146,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BloodbathEvents.cpp" />
     <ClCompile Include="DayEvents.cpp" />
     <ClCompile Include="Simulation.cpp" />
     <ClCompile Include="Source.cpp" />
