--- a/HungerGamesSimulator/HungerGamesSimulator.vcxproj.filters
+++ b/HungerGamesSimulator/HungerGamesSimulator.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="DayEvents.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BloodbathEvents.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Header.h">
