--- a/HungerGamesSimulator/HungerGamesSimulator.vcxproj
+++ b/HungerGamesSimulator/HungerGamesSimulator.vcxproj
@@ -148,6 +148,7 @@
   <ItemGroup>
     <ClCompile Include="BloodbathEvents.cpp" />
     <ClCompile Include="DayEvents.cpp" />
+    <ClCompile Include="NightEvents.cpp" />
     <ClCompile Include="Simulation.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Tribute.cpp" />
